package.json | homepage edit

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oa_llm",
   "version": "0.1.0",
-  "homepage": "https://jckavanagh.github.io/oa_llm/",
+  "homepage": "https://jckavanagh.github.io/oa_llm",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
