--- a/deploy.yml
+++ b/deploy.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "REACT_APP_SUPABASE_URL=${{ secrets.REACT_APP_SUPABASE_URL }}" >> .env
-          echo "REACT_APP_SUPABASE_ANON_KEY=${{ secrets.REACT_APP_SUPABASE_ANON_KEY }}" >> .env
+          echo "REACT_APP_SUPABASE_URL=${{ vars.REACT_APP_SUPABASE_URL }}" >> .env
+          echo "REACT_APP_SUPABASE_ANON_KEY=${{ vars.REACT_APP_SUPABASE_ANON_KEY }}" >> .env
 
       - name: Build the project
         run: npm run build
